# supermemory-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: _client.py  main.py  server.py  supermemory.py
tests/: __init__.py  conftest.py  test_connection_live.py  test_tools.py
